@@ -1,6 +1,7 @@
 2005-06-03  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
 	* src/DisplayModels.py (RepositoryModel): Display repository type as text
 	* src/RelLib.py (Repository): Serialize type as tuple not unicode
+	* src/EditSource.py (ReposRefListView): Display repository type as text
 
 2005-06-02  Don Allingham  <don@gramps-project.org>
 	* src/DisplayModels.py: Handle EventRefs properly
